@startuml FactoryMethodPattern

skinparam classAttributeIconSize 0
skinparam backgroundColor White
skinparam shadowing false
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
    FontName Arial
    FontSize 11
    HeaderBackgroundColor White
}
skinparam note {
    BackgroundColor White
    BorderColor Black
    FontName Arial
    FontSize 10
}

title Factory Method Pattern

class "AddEditRoomDialog / RoomRepository" as Client {
    ..
}

class RoomFactory as Creator {
    ..
    +{static} CreateRoom(roomType: string): Room
    +{static} CreateRoom(roomType, number, floor, price): Room
    +{static} CreateRoomFromDatabase(roomType, roomId, data): Room
    -{static} ConfigureRoomDefaults(room: Room): void
}

abstract class Room as IProduct {
    +RoomNumber : string
    +FloorNumber : int
    +BasePrice : decimal
    +Status : string
    +MaxOccupancy : int
    +BedType : string
    ..
    +GetPrice(): decimal
    +GetDescription(): string
    +CalculateTotalPrice(nights: int): decimal
    +CanAccommodate(guests: int): bool
}

class SingleRoom {
    ..
    +GetPrice(): decimal
    +GetDescription(): string
}

class DoubleRoom {
    ..
    +GetPrice(): decimal
    +GetDescription(): string
}

class SuiteRoom {
    ..
    +GetPrice(): decimal
    +GetDescription(): string
}

class DeluxeRoom {
    ..
    +GetPrice(): decimal
    +GetDescription(): string
}

Client  o--  Creator  : -factory
Client  -->  IProduct : -room

Creator ..>  IProduct
Creator ..>  SingleRoom
Creator ..>  DoubleRoom
Creator ..>  SuiteRoom
Creator ..>  DeluxeRoom

SingleRoom  ..|> IProduct
DoubleRoom  ..|> IProduct
SuiteRoom   ..|> IProduct
DeluxeRoom  ..|> IProduct

note "room = RoomFactory.CreateRoom(roomType)" as N1
Client .. N1

@enduml
